[package]
name = "arp-track"
version = "0.1.0"
authors = ["David Holtz <david.richard.holtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arplib = { path = "../arplib" }
hotpot-db = "0.0.2"
serde = { version = "1.0.104", features = ["derive"] }